# wclap-bridge

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  SUPPORT.txt  translate-clap-api.js  translate-clap-structs.js  wasmtime-fetched.cmake
.github/workflows/: ci.yml  release.yml
include/: wclap-bridge.h  wclap-bridge.rs
plugin/: CMakeLists.txt  Makefile  README.md
plugin/source/: clap_entry.cpp  metadata-cache.h  wclap-bridge-plugin.cpp
source/: class-id.generated.h  config.h  instance.h  scoped-thread.cpp  scoped-thread.h  translate-clap-api.h  validity.cpp  validity.h  wclap-arenas.cpp  wclap-arenas.h  wclap-bridge-impl.cpp  wclap-bridge-impl.h  wclap-bridge.cpp  wclap-module.h  wclap-proxies.h  wclap-thread.cpp  wclap-thread.h  wclap-translate-struct.generated.h  wclap-translation-scope.cpp  wclap-translation-scope.h  wclap.cpp  wclap.h  wclap32-translate-struct.generated.h  wclap64-translate-struct.generated.h
source/_generic/: wclap-module-base.h  wclap-module.h  wclap-plugin-factory.h  wclap-plugin.h
source/_impl/: wclap-generic.h  wclap-module-generic.h
source/wasmtime/: call-wasm.h  wclap-impl-wasmtime.h  wclap-impl.hxx  wclap-thread-impl.h  wclap-thread-impl.hxx
source/wclap-instance-wasmi/: wclap-instance-wasmi.cpp  wclap-instance-wasmi.h
source/wclap-instance-wasmtime/: common.h  wclap-impl.hxx  wclap-instance-wasmtime.cpp  wclap-instance-wasmtime.h  wclap-thread-impl.hxx
source/wclap32/: translate-clap-structs.generated.h  wclap-arenas.cpp  wclap-arenas.h  wclap-translation-scope.cpp  wclap-translation-scope.h  wclap-translation.cpp  wclap-translation.h
source/wclap64/: translate-clap-structs.generated.h  wclap-translation.cpp  wclap-translation.h
source/wclapN/: wclap-arenas.h  wclap-translation-backup.hxx  wclap-translation-pre.h  wclap-translation-scope.hxx  wclap-translation.h  wclap-translation.hxx
tests/: bridge_test.cpp  integration_test.cpp
wasi-sandbox/: CMakeLists.txt
wasi-sandbox/include/: wasi-sandbox.h  wasi.h  wasic.h
wasi-sandbox/source/: wasi-sandbox.cpp
